generer une liste aléatoire de films pour la catégorie Mystery

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     </div>
     <div id="filmsContainer" class="container film-container">
         <h2>Mystery</h2>
-        <div class="row" id="mysteryMovies">
+        <div class="row row-cols-3" id="mysteryMovies">
         </div>
     </div>
     <div id="multipropo" class="container film-container">
