Avancement sur le responsive

--- a/index.html
+++ b/index.html
@@ -223,17 +223,17 @@
         </div>
     </header>
     <div class="container film-container" id="bestFilmContainer">
-        <h2>Meilleur film</h2>
-        <div class="row">
+        <h2 class="text-md-left text-center">Meilleur film</h2>
+        <div class="row justify-content-center">
             <div class="col-md-12">
                 <div class="film-card">
                     <div class="row">
-                        <div class="col-md-3 order-md-1 order-sm-1">
+                        <div class="col-md-3 order-md-1 order-sm-1 text-center">
                             <div class="image-container">
                                 <img id="bestFilmImage" src="https://picsum.photos/id/237/200/300" alt="Image du meilleur film">
                             </div>
                         </div>
-                        <div class="col-md-9 order-md-2 order-sm-1">
+                        <div class="col-md-9 order-md-2 order-sm-1 text-md-left text-center">
                             <div class="content-container">
                                 <h3 id="bestFilmTitle">Titre du meilleur film</h3>
                                 <p id="bestFilmDescription">Description du meilleur film</p>
@@ -247,17 +247,17 @@
             </div>
         </div>
     </div>
-    <div id="filmsContainer" class="container film-container">
-        <h2>Mystery</h2>
+    <div id="filmsContainer" class="container film-container text-md-left text-center">
+        <h2>Films les mieux notés</h2>
         <div class="row row-cols-3" id="mysteryMovies">
         </div>
     </div>
-    <div id="filmsContainer2" class="container film-container">
+    <div id="filmsContainer2" class="container film-container text-md-left text-center">
         <h2>Horreur</h2>
         <div class="row row-cols-3" id="HorrorMovies">
         </div>
     </div>
-    <div id="filmsContainer3" class="container film-container">
+    <div id="filmsContainer3" class="container film-container text-md-left text-center">
         <h2>Adventure</h2>
         <div class="row row-cols-3" id="AdventureMovies">
         </div>
@@ -265,7 +265,7 @@
     <div class="container film-container">
         <div class="row align-items-center"> 
             <div class="col-md-2">
-                <h2>Autres </h2>
+                <h2>Autres :</h2>
             </div>
             <div class="col-md-4 ">
                 <select id="menuDeroulant" class="form-select">
@@ -280,7 +280,7 @@
     <div class="container film-container">
         <div class="row align-items-center"> 
             <div class="col-md-2">
-                <h2>Autres </h2>
+                <h2>Autres :</h2>
             </div>
             <div class="col-md-4 ">
                 <select id="menuDeroulant2" class="form-select">
