--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
     <div class="container film-container">
         <div class="row align-items-center"> 
-            <div class="col-md-2">
+            <div class="col-lg-4 col-md-4 d-none d-md-block ">
                 <h2>Autres :</h2>
             </div>
             <div class="col-md-4 ">
@@ -277,9 +277,9 @@
             </div>
         </div>
     </div>
-    <div class="container film-container">
+    <div class="container film-container d-none d-md-block ">
         <div class="row align-items-center"> 
-            <div class="col-md-2">
+            <div class="col-lg-4 col-md-4 ">
                 <h2>Autres :</h2>
             </div>
             <div class="col-md-4 ">
