Boutons voir plus voir moins partout, et ajout d'un choix par défaut pour les menus !

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
         <div class="row row-cols-3" id="HorrorMovies">
         </div>
     </div>
+    <button id="voirPlusButton3" class="btn btn-primary d-lg-none">Voir plus</button>
     <div id="filmsContainer3" class="container film-container text-md-left text-center">
         <h2>Adventure</h2>
         <div class="row row-cols-3" id="AdventureMovies">
         </div>
     </div>
+    <button id="voirPlusButton2" class="btn btn-primary d-lg-none">Voir plus</button>
     <div class="container film-container">
         <div class="row align-items-center"> 
             <div class="col-lg-4 col-md-4 d-none d-md-block ">
@@ -88,6 +90,7 @@
                 <div class="row row-cols-3" id="VariableMovies">
                 </div>
             </div>
+            <button id="voirPlusButton4" class="btn btn-primary d-lg-none">Voir plus</button>
         </div>
     </div>
     <div class="container film-container d-none d-md-block ">
@@ -103,6 +106,7 @@
                 <div class="row row-cols-3" id="Variable2eMovies">
                 </div>
             </div>
+            <button id="voirPlusButton5" class="btn btn-primary d-lg-none">Voir plus</button>
         </div>
     </div>
 
