Mise à jour de la modal avec l'image aléatoire générée.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JustStreamIt</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <script src="js\updateBestFilm.js"></script>
@@ -93,9 +94,9 @@
             <button id="voirPlusButton4" class="btn btn-primary d-lg-none">Voir plus</button>
         </div>
     </div>
-    <div class="container film-container d-none d-md-block ">
+    <div class="container film-container d-sm-block d-md-none d-lg-block">
         <div class="row align-items-center"> 
-            <div class="col-lg-4 col-md-4 ">
+            <div class="col-lg-4 col-md-4 d-none d-md-block ">
                 <h2>Autres :</h2>
             </div>
             <div class="col-md-4 ">
