--- a/index.html
+++ b/index.html
@@ -7,22 +7,9 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    
 </head>
-
-<script src="js\updateBestFilm.js"></script>
-<script src="js\updateMenu.js"></script>
-<script src="js\HorrorApiRequste.js"></script>
-<script src="js\mysteryApiRequste.js"></script>
-<script src="js\AdventureApiRequste.js"></script>
-<script src="js\varriableApiRequste.js"></script>
-<script src="js\varriableApiRequste2.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<body>
+<body>    
     <header>
         <div class="container header_container">
             <div class="row align-items-center ">
@@ -110,10 +97,23 @@
             <button id="voirPlusButton5" class="btn btn-primary d-lg-none">Voir plus</button>
         </div>
     </div>
+<script src="js/updateBestFilm.js"></script>
+<script src="js/updateMenu.js"></script>
+<script src="js/HorrorApiRequste.js"></script>
+<script src="js/mysteryApiRequste.js"></script>
+<script src="js/AdventureApiRequste.js"></script>
+<script src="js/varriableApiRequste.js"></script>
+<script src="js/varriableApiRequste2.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="js/modalUpdate.js"> </script>
+<script src="js/more.js"> </script>
 
-</body>
-</html>
-<script src="js\modalUpdate.js"></script>
+
 <div class="modal fade" id="modalfade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
@@ -135,7 +135,7 @@
                     </div>
                     <div class="col-md-6 col-sm-12 d-flex order-2 order-md-0  justify-content-center justify-content-md-end">
                         <div class="img justify-content-center col-md-12 col-lg-6 col-sm-10">
-                            <img id="modalFilmImage" src="https://picsum.photos/id/237/200/300" class="w-100">
+                            <img id="modalFilmImage" src="https://picsum.photos/id/237/200/300" alt="Image" class="w-100">
                         </div>
                     </div>
                     <div>
@@ -159,4 +159,5 @@
         </div>
     </div>
 </div>
-<script src="js\more.js"></script>
+</body>
+</html>
