--- a/index.html
+++ b/index.html
@@ -47,21 +47,39 @@
             </div>
         </div>
     </div>
-    <div id="filmsContainer" class="container film-container text-md-left text-center">
-        <h2>Films les mieux notés</h2>
-        <div class="row row-cols-3" id="mysteryMovies">
+    <div class="container film-container">
+        <div class="row align-items-center"> 
+            <div>
+                <h2>Films les mieux notés :</h2>
+            </div>
+            <div id="filmsContainer" class="container film-container">
+                <div class="row row-cols-3" id="VariableMovies">
+                </div>
+            </div>
         </div>
     </div>
     <button id="voirPlusButton" class="btn btn-primary d-lg-none">Voir plus</button>
-    <div id="filmsContainer2" class="container film-container text-md-left text-center">
-        <h2>Horreur</h2>
-        <div class="row row-cols-3" id="HorrorMovies">
+    <div class="container film-container">
+        <div class="row align-items-center"> 
+            <div>
+                <h2>Horreur :</h2>
+            </div>
+            <div id="filmsContainer2" class="container film-container">
+                <div class="row row-cols-3" id="VariableMovies">
+                </div>
+            </div>
         </div>
     </div>
     <button id="voirPlusButton3" class="btn btn-primary d-lg-none">Voir plus</button>
-    <div id="filmsContainer3" class="container film-container text-md-left text-center">
-        <h2>Adventure</h2>
-        <div class="row row-cols-3" id="AdventureMovies">
+    <div class="container film-container">
+        <div class="row align-items-center"> 
+            <div >
+                <h2>Adventure :</h2>
+            </div>
+            <div id="filmsContainer3" class="container film-container">
+                <div class="row row-cols-3" id="VariableMovies">
+                </div>
+            </div>
         </div>
     </div>
     <button id="voirPlusButton2" class="btn btn-primary d-lg-none">Voir plus</button>
@@ -99,11 +117,7 @@
     </div>
 <script src="js/updateBestFilm.js"></script>
 <script src="js/updateMenu.js"></script>
-<script src="js/HorrorApiRequste.js"></script>
-<script src="js/mysteryApiRequste.js"></script>
-<script src="js/AdventureApiRequste.js"></script>
 <script src="js/varriableApiRequste.js"></script>
-<script src="js/varriableApiRequste2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -161,3 +175,5 @@
 </div>
 </body>
 </html>
+
+
